# sistemas-multiagentes

./: .env.example  .gitignore  README.md  pyproject.toml
DEMO/: EXPLAIN.md  README.md  __main__.py  cli.py  llm.py  runtime.py  workflow.py
DEMO/corpus/: news_corpus.json
news_system_demo/: EXPLAIN.md  README.md  __init__.py  __main__.py  cli.py  llm.py  models.py  runtime.py  workflow.py
news_system_demo/corpus/: news_corpus.json
news_system_demo/nodes/: __init__.py  curate.py  load_workspace.py  render.py  research.py  review.py  shared.py  verify.py  write.py
news_system_demo/runs/entrega-langgraph-sma-ai-regulation/: report.md
tests/: test_demo.py
