[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sistemas-multiagentes"
version = "0.1.0"
description = "Demo multiagente observable con LangGraph."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.1",
  "langgraph>=1.0.0",
  "langgraph-checkpoint-sqlite>=2.0.11",
  "pydantic>=2.11.2",
  "python-dotenv>=1.1.0",
  "tenacity>=9.0.0",
  "typer>=0.15.2",
]

[project.scripts]
sma-demo = "DEMO.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["DEMO*"]

[tool.setuptools.package-data]
DEMO = ["corpus/*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
]
